{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 852,
  "lineage": "1f0d0c21-9317-0892-0694-8fb2da958c63",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/zones/us-central1-a/instanceGroups/instance-group-manager",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-04-23T05:19:48.489-07:00",
            "enable_cdn": false,
            "fingerprint": "gzBxPBvEqE0=",
            "generated_id": 3312288136210028939,
            "health_checks": [
              "projects/gd-gcp-internship-devops/global/healthChecks/http-health-check"
            ],
            "id": "projects/gd-gcp-internship-devops/global/backendServices/backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "backend-service",
            "port_name": "http",
            "project": "gd-gcp-internship-devops",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/global/backendServices/backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.compute.google_compute_instance_group_manager.instance_group_manager",
            "module.compute.google_compute_instance_template.instance_template",
            "module.network.google_compute_health_check.http_health_check",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.custom-subnet1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-23T05:18:57.104-07:00",
            "deny": [],
            "description": "Allow HTTP traffic",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gd-gcp-internship-devops/global/firewalls/http-firewall-rule",
            "log_config": [],
            "name": "http-firewall-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/global/networks/vpc-andrej",
            "priority": 1000,
            "project": "gd-gcp-internship-devops",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/global/firewalls/http-firewall-rule",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-allow"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        },
        {
          "index_key": "ssh",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-23T05:18:57.120-07:00",
            "deny": [],
            "description": "Allow SSH traffic",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gd-gcp-internship-devops/global/firewalls/ssh-firewall-rule",
            "log_config": [],
            "name": "ssh-firewall-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/global/networks/vpc-andrej",
            "priority": 1000,
            "project": "gd-gcp-internship-devops",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/global/firewalls/ssh-firewall-rule",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh-allow"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/gd-gcp-internship-devops/global/forwardingRules/forwarding-rule",
            "ip_address": "34.120.193.245",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "forwarding-rule",
            "port_range": "80-80",
            "project": "gd-gcp-internship-devops",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/global/forwardingRules/forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/global/targetHttpProxies/target-http-proxy"
          },
          "dependencies": [
            "module.compute.google_compute_instance_group_manager.instance_group_manager",
            "module.compute.google_compute_instance_template.instance_template",
            "module.network.google_compute_backend_service.backend_service",
            "module.network.google_compute_health_check.http_health_check",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.custom-subnet1",
            "module.network.google_compute_target_http_proxy.target-http-proxy",
            "module.network.google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/gd-gcp-internship-devops/global/networks/vpc-andrej",
            "mtu": 0,
            "name": "vpc-andrej",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "1332054006524680650",
            "project": "gd-gcp-internship-devops",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/global/networks/vpc-andrej"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "custom-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-04-23T05:18:57.822-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/gd-gcp-internship-devops/regions/us-central1/subnetworks/custom-subnet1",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "custom-subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/global/networks/vpc-andrej",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gd-gcp-internship-devops",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/regions/us-central1/subnetworks/custom-subnet1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "target-http-proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-04-23T05:20:22.502-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/gd-gcp-internship-devops/global/targetHttpProxies/target-http-proxy",
            "name": "target-http-proxy",
            "project": "gd-gcp-internship-devops",
            "proxy_bind": false,
            "proxy_id": 6698166028520266089,
            "self_link": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/global/targetHttpProxies/target-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/global/urlMaps/url-map"
          },
          "dependencies": [
            "module.compute.google_compute_instance_group_manager.instance_group_manager",
            "module.compute.google_compute_instance_template.instance_template",
            "module.network.google_compute_backend_service.backend_service",
            "module.network.google_compute_health_check.http_health_check",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.custom-subnet1",
            "module.network.google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-04-23T05:20:10.737-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/global/backendServices/backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "FRB58KPDS1c=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/gd-gcp-internship-devops/global/urlMaps/url-map",
            "map_id": 3914912025394420117,
            "name": "url-map",
            "path_matcher": [],
            "project": "gd-gcp-internship-devops",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gd-gcp-internship-devops/global/urlMaps/url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.google_compute_instance_group_manager.instance_group_manager",
            "module.compute.google_compute_instance_template.instance_template",
            "module.network.google_compute_backend_service.backend_service",
            "module.network.google_compute_health_check.http_health_check",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.custom-subnet1"
          ]
        }
      ]
    }
  ]
}